commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/12/2018
+ms.date: 12/18/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 1f990dfa875604e4d5ea62943aabf3cee1e1ce94
-ms.sourcegitcommit: 1ea1b4fc58055c62728143388562689f1ef96cb2
+ms.openlocfilehash: 4a8d5c21e973377b7185b3d6f39b4eb76707afd2
+ms.sourcegitcommit: 816f39e852a8f453e8682081871a31bc66db153a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53329118"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "53637520"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -37,13 +37,13 @@ Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du F
 
 ## <a name="adopt-the-iis-in-process-hosting-model"></a>Adopter le modèle d’hébergement intra-processus IIS
 
-Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :
+Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-model>.
+Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
@@ -73,6 +73,12 @@ Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Ver
 </ItemGroup>
 ```
 
+Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure. Cela génère l’erreur suivante :
+
+```console
+Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
+```
+
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
 
 Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :
@@ -93,7 +99,7 @@ Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètre
 
 ## <a name="call-configurekestrel-instead-of-usekestrel"></a>Appelez ConfigureKestrel au lieu de UseKestrel
 
-Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model):
+Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -138,7 +144,7 @@ Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles bali
 
 ## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a>Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement
 
-De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/aspnet-core-module#in-process-hosting-model). Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement. Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.
+De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model). Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement. Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.
 
 ## <a name="additional-resources"></a>Ressources supplémentaires
 
