commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/18/2018
+ms.date: 12/27/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 4a8d5c21e973377b7185b3d6f39b4eb76707afd2
-ms.sourcegitcommit: 3e94d192b2ed9409fe72e3735e158b333354964c
+ms.openlocfilehash: aea7e7b7e8de4bc2f1769e7aca278748164eb1ba
+ms.sourcegitcommit: e1cc4c1ef6c9e07918a609d5ad7fadcb6abe3e12
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/31/2018
-ms.locfileid: "53637520"
+ms.lasthandoff: 01/03/2019
+ms.locfileid: "53997173"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -52,6 +52,8 @@ Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
 ```
+
+Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.
 
 La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :
 
